# python4eda

./: .gitignore  .nojekyll  _quarto.yml  ch00.qmd  ch01.qmd  ch02.qmd  ch03.qmd  ch04.qmd  ch05.qmd  ch06.qmd  ch07.qmd  index.html  index.qmd  intro.html  main.py  pyproject.toml  references.html  search.json  setup.py  summary.html
.github/workflows/: publish.yml
site_libs/bootstrap/: bootstrap-fb5c1c7cd6fde2cd4e94a1acf25c6783.min.css
